--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "lib": ["ES2020", "DOM"],
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -21,8 +20,9 @@
     "preserveConstEnums": true
   },
   "include": [
-    "src/**/*"
-, "plugins"  ],
+    "src/**/*",
+    "plugins/**/*"
+  ],
   "exclude": [
     "node_modules",
     "dist",
