--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,49 @@
-# === Compilazione e Build ===
-# Esclude la cartella di build creata da CMake
-build/
-bin/
-obj/
+# Dependencies
+node_modules/
 
-# File generati da CMake
-CMakeCache.txt
-CMakeFiles/
-CMakeScripts/
-cmake_install.cmake
-Makefile
-install_manifest.txt
-compile_commands.json
+# Build outputs
+dist/
 
-# === Librerie e Output ===
-# Librerie statiche (.a) e condivise (.so, .dylib, .dll)
-*.a
-*.so
-*.dylib
-*.dll
-*.lib
+# TypeScript compiled outputs
+*.js
+*.js.map
+*.d.ts
+*.d.ts.map
 
-# Eseguibili (senza estensione o .exe)
-*.exe
-*.out
-server
+# BUT keep source TypeScript files
+!*.ts
 
-# === File Oggetto e Debug ===
-*.o
-*.obj
-*.d
-*.gch
-*.pdb
-*.idb
+# Keep specific config files that are .js
+!rollup.config.js
+!*.config.js
 
-# === Editor e IDE ===
-# Visual Studio Code
+# IDE
 .vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-
-# CLion / JetBrains
 .idea/
-cmake-build-*/
-
-# Vim / Emacs
-*~
 *.swp
 *.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
 
-# === Logs e Temporanei ===
+# Logs
+logs/
 *.log
-*.tmp
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-dockerfile
-*.crt
-node_modules
-dist
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+.cache/
