--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/d3": "^7.4.2",
+    "@types/d3-array": "^3.0.5",
+    "@types/d3-selection": "^3.0.5",
+    "@types/d3-zoom": "^3.0.3",
+    "@types/geojson": "^7946.0.10",
     "concurrently": "^8.2.2",
     "rollup": "^4.9.1",
     "tslib": "^2.6.2",
