--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "A modular, plugin-based visual graph editor for TypeScript applications",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
-    "build": "npm run build:tsc && npm run build:bundle",
-    "build:tsc": "tsc",
-    "build:bundle": "rollup -c",
-    "build:watch": "tsc --watch",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "dev": "concurrently \"npm run build:watch\" \"python3 -m http.server 3000\"",
     "serve": "python3 -m http.server 3000",
     "clean": "rm -rf dist"
@@ -31,11 +30,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/d3": "^7.4.2",
-    "@types/d3-array": "^3.0.5",
-    "@types/d3-selection": "^3.0.5",
-    "@types/d3-zoom": "^3.0.3",
-    "@types/geojson": "^7946.0.10",
-    "concurrently": "^8.2.2",
     "rollup": "^4.9.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
