--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
     "dev": "concurrently \"npm run build:watch\" \"python3 -m http.server 3000\"",
-    "serve": "python3 -m http.server 3000",
+    "serve": "python -m http.server 3000",
     "clean": "rm -rf dist"
   },
   "keywords": [
